move new css definition to global file so that people dont need to shift-refresh to see the fix

--- a/content/scripts/online.css
+++ b/content/scripts/online.css
@@ -5,11 +5,6 @@
 	float: left;
 }
 
-.onlinename {
-	font-size: 10px;
-	font-weight: bold;
-}
-
 .onlinePlayer a {
 	text-decoration: none;
 	color: black;
