--- a/css/00000005.css
+++ b/css/00000005.css
@@ -319,6 +319,13 @@ img.screenshot {
 }
 
 /* -------------------------------------------------------------------------*/
+/* partial online.css */
+.onlinename {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+/* -------------------------------------------------------------------------*/
 /* events.css */
 
 .event {
